# internal/delivery/http/user_handler.go
@@ -2,9 +2,7 @@ package http
 
 import (
 	"clicknext-backend/internal/delivery/http/dto"
-	"clicknext-backend/internal/domain"
 	"clicknext-backend/internal/usecase"
-	"clicknext-backend/internal/validator"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -15,59 +13,6 @@ type UserHandler struct {
 
 func NewUserHandler(userUsecase *usecase.UserUsecase) *UserHandler {
 	return &UserHandler{userUsecase: userUsecase}
-}
-
-// CreateUser godoc
-// @Summary Create a new user
-// @Description Create a new user by providing user details
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param user body dto.UserCreateRequest true "User Info"
-// @Success 201 {object} dto.UserResponse
-// @Failure 400 {object} dto.ErrorResponse
-// @Failure 500 {object} dto.ErrorResponse
-// @Router /users [post]
-func (h *UserHandler) CreateUser(c *fiber.Ctx) error {
-	var req dto.UserCreateRequest
-	// BodyParser
-	if err := c.BodyParser(&req); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error":   "Invalid input",
-			"details": err.Error(),
-		})
-	}
-
-	// Validate
-	if errorsMap, err := validator.ValidateStruct(req); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error":   "Validation failed",
-			"details": err.Error(),
-		})
-	} else if errorsMap != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error":   "Validation failed",
-			"details": errorsMap,
-		})
-	}
-
-	// Create
-	user := req.ToUserDomain()
-	if err := h.userUsecase.CreateUser(user); err != nil {
-		if validationErr, ok := err.(*domain.ValidationError); ok {
-			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-				"error":   validationErr.Message,
-				"details": validationErr.Errors,
-			})
-		}
-
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"error":   "Failed to create user",
-			"details": err.Error(),
-		})
-	}
-
-	return c.Status(fiber.StatusCreated).JSON(dto.FromUserDomain(user))
 }
 
 // GetUserByID godoc
