# internal/delivery/routes/routes.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"clicknext-backend/internal/delivery/http/handlers"
+	"clicknext-backend/internal/middleware"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -9,7 +10,12 @@ import (
 func RegisterRoutes(app *fiber.App, h *handlers.Handler) {
 	api := app.Group("/api")
 
+	auth := api.Group("/auth")
+	auth.Post("/register", h.AuthHandler.Register)
+	auth.Post("/login", h.AuthHandler.Login)
+
 	user := api.Group("/users")
-	user.Post("/", h.UserHandler.CreateUser)
-	user.Get("/:id", h.UserHandler.GetUserByID)
+	user.Use(middleware.Protected())
+	user.Get("/:id", middleware.CheckOwnership(), h.UserHandler.GetUserByID)
+
 }
